--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -27,12 +27,14 @@ steps:
 - task: ArchiveFiles@2
   inputs:
     rootFolderOrFile: '$(System.DefaultWorkingDirectory)'
-    includeRootFolder: false  
+    includeRootFolder: false
+    archiveFile: '$(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip' 
+    replaceExistingArchive: true   
 
 - task: AzureWebApp@1
   inputs:
     azureSubscription: 'Otiuc Subscription (75e19ff5-83de-433a-9b47-7641971a81d5)'
     appType: 'webApp'
     appName: 'otiucwhatsappmessenger'
-    package: '$(System.DefaultWorkingDirectory)/**/*.zip'
+    package: '$(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip'
     deploymentMethod: 'auto'
